--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -69,17 +69,22 @@ html {
 }
 
 body {
-    font-size: 1.6rem;
-    font-weight: 500;
+    font-size: 2.5rem;
+    font-weight: 600;
     line-height: 2rem;
     color: var(--light-color);
     font-family: var(--font-family);
 }
-
+.thumbnail{
+    background: url(/assets/images/thumbnail.png) no-repeat center;
+    background-size: cover;
+    position: relative;
+    height: 1000px;
+}
 .app {
     width: 100%;
     height: fit-content;
-    background-image: linear-gradient(to bottom, #00062A, #0065dd);
+    background: linear-gradient(180deg, #000428 0%, #004E92 100%);
     background-repeat: no-repeat;
 }
 
