--- a/assets/styles/partials/header.css
+++ b/assets/styles/partials/header.css
@@ -1,14 +1,14 @@
 #header {
-    height: 100px;
+    height: 26rem;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    padding: 0px 150px;
+    justify-content: space-around;
+    /* padding: 0px 150px; */
 }
 
 #logo {
     height: 100%;
-    width: 200px;
+    width: 60rem;
 }
 
 #logo > img {
@@ -22,7 +22,7 @@
     display: flex;
     align-items: center;
     list-style: none;
-    gap: 60px;
+    gap: 10rem;
 }
 
 #nav > li:last-child > i {
